@@ -2,6 +2,7 @@
 -----
 * Validate IP address supplied on the command line or in the config file.
 * Compress index docs to reduce memory usage with the search index.
+* Ordering searches works now.
 
 0.8.2
 -----
